--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 id-arena = "2.2.1"
 lazy_static = "1.4.0"
+regex = "1.9.5"
 sexp = "1.1.4"
 wabt = "0.10.0"
 walrus = "0.20.1"
