--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2021"
 [dependencies]
 id-arena = "2.2.1"
 lazy_static = "1.4.0"
+linkme = "0.3.15"
 regex = "1.9.5"
 sexp = "1.1.4"
 wabt = "0.10.0"
 walrus = "0.20.1"
 wasmtime = "12.0.1"
+clarity-vm = { version = "2.1.1", features = ["testing"] }
